2011-05-21  Colin Watson  <cjwatson@ubuntu.com>
2011-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't stat devices unless we have to.

	* grub-core/kern/emu/getroot.c (grub_find_device): Recognize
	dir == /dev/mapper.
	(grub_guess_root_device): Use already known os_dev if possible.
	* grub-core/kern/emu/hostdisk.c
	(convert_system_partition_to_system_disk): Scan only in /dev/mapper
	if device is known to be a dm one.

2011-05-20  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig.in: Export GRUB_CMDLINE_LINUX_XEN_REPLACE and
	GRUB_CMDLINE_LINUX_XEN_REPLACE_DEFAULT.
	Reported by: Pawel Tecza.

2011-05-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (lsacpi): Fix ia64 mismerge.
	(lsefisystab): Likewise.
	(lssal): Likewise.
	(lsefimmap): Likewise.
	(hdparm): Enable on qemu-mips.
	(setjmp): Add ia64 nodist.
	(serial): Simplify tags.

2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.util.def (grub-ofpathname): Install manual page.

2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/fs/squash4.c: Add missing GRUB_MOD_LICENSE.

2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Add grub-core/modinfo.sh and a number of test files.

2011-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/usbhub.c (poll_nonroot_hub): Downgrade a printf
	into dprintf.

2011-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Use full 64-bit division.

	* grub-core/kern/misc.c (grub_divmod64_full): Renamed to ...
	(grub_divmod64): ... this.
	* include/grub/misc.h (grub_divmod64): Removed. All users switch to full
	version.

2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in: Use portable `.' rather than non-portable
	`source'.

2011-05-18  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/genmod.sh.in: Use 'set -e' rather than '#! /bin/sh -e',
	to avoid accidents when debugging with 'sh -x'.
	* grub-core/gensyminfo.sh.in: Likewise.
	* tests/example_scripted_test.in: Likewise.